--- a/client/email.html
+++ b/client/email.html
@@ -11,7 +11,7 @@
             margin:0 auto;
         }
         .table{
-            border:1px solid #cad9ea;
+            border:1px solid #cad9ea;z
             color:#666;
         }
         .table th {
